# connector

./: LICENSE  README.md  SPEC.md  connector.py  pyproject.toml
connector/: __init__.py  aio.py  api.py  backup.py  codegen.py  config.py  connection.py  core.py  errors.py  join.py  markdown.py  migrate.py  query.py  schema.py
skill/pg-connector/: SKILL.md
skill/pg-connector/references/: extras.md  queries.md  schema.md
tests/: conftest.py  test_api.py  test_async.py  test_backup.py  test_batch_mixed.py  test_codegen.py  test_config.py  test_connection.py  test_join.py  test_mixed_scratch.py  test_query.py  test_schema.py  test_smoke.py  test_vector.py
