[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-connector"
version = "2.0.0.dev0"
description = "PostgreSQL connector with an intuitive query builder, schema tooling, migrations and more"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
vector = ["pgvector>=0.3"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29"]

[tool.setuptools]
packages = ["connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
